--- a/MrBounce/index.html
+++ b/MrBounce/index.html
@@ -1,42 +1,10 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
-<head>
-	<meta charset="UTF-8" />
-	<title>Symetrical Cow - Mr Bounce</title>
-	<script src="lib/phaser.min.js"></script>
-	<script src="Boot.js"></script>
-	<script src="Preloader.js"></script>
-	<script src="MainMenu.js"></script>
-	<script src="Game.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-</head>
-<body>
-
-<script type="text/javascript">
-
-window.onload = function() {
-
-	//	100% of the browser window - see Boot.js for additional configuration
-	var game = new Phaser.Game(640, 480, Phaser.AUTO, '');
-
-	//	Add the States your game has.
-	//	You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
-	game.state.add('Boot', BasicGame.Boot);
-	game.state.add('Preloader', BasicGame.Preloader);
-	game.state.add('MainMenu', BasicGame.MainMenu);
-	game.state.add('Game', BasicGame.Game);
-
-	//	Now start the Boot state.
-	game.state.start('Boot');
-
-};
-
-</script>
-
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Symetrical Cow - Mr Bounce</title>
+        <script data-main="src/main" src="src/lib/require.js"></script>
+    </head>
+    <body>
+    </body>
 </html>
