Fix casing issue when on Live server

--- a/MrBounce/index.html
+++ b/MrBounce/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Symetrical Cow - Mr Bounce</title>
-        <script data-main="src/main" src="src/lib/require.js"></script>
+        <script data-main="src/Main" src="src/lib/require.js"></script>
     </head>
     <body>
     </body>
