--- a/MineRunner/index.html
+++ b/MineRunner/index.html
@@ -32,11 +32,12 @@
 	<link rel="apple-touch-icon" sizes="1024x1024" href="icons/app_icon_1024x1024.png">
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
 	<script src="src/lib/phaser.js"></script>
+	<script src="src/lib/phaser-tiled.js"></script>
 	<script src="src/Boot.js"></script>
 	<script src="src/Preloader.js"></script>
 	<script src="src/MainMenu.js"></script>
 	<script src="src/Game.js"></script>
-	<script src="src/Mine.js"></script>
+	<script src="src/EnemyTank.js"></script>
 </head>
 <body>
 
