--- a/MineRunner/index.html
+++ b/MineRunner/index.html
@@ -38,6 +38,10 @@
 	<script src="src/MainMenu.js"></script>
 	<script src="src/Game.js"></script>
 	<script src="src/EnemyTank.js"></script>
+	<script src="src/EnemyBomber.js"></script>
+	<script src="src/PowerUp.js"></script>
+	<script src="src/Bomb.js"></script>
+	<script src="src/Player.js"></script>
 </head>
 <body>
 
