--- a/MrBounce/index.html
+++ b/MrBounce/index.html
@@ -9,7 +9,7 @@
 		<meta name="robots" content="noindex,nofollow" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="apple-mobile-web-app-title" content="Phaser App">
+		<meta name="apple-mobile-web-app-title" content="Catch The Birdie">
 		<meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
         <script data-main="birdie" src="src/lib/require.js"></script>
     </head>
